# bank_widget

./: README.md  pyproject.toml
src/: funcs.py  main.py
tests/: conftest.py  test.json  test_funcs.py
