[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = ""
authors = ["Valerya Yakushina <v.yaku.bmstu@gmail.com>"]
readme = "README.md"
packages = [{include = "bank_widget"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
